@@ -196,10 +196,8 @@ func (f *fleetGateway) execute(ctx context.Context) (*fleetapi.CheckinResponse, 
 	// get events
 	ee, ack := f.reporter.Events()
 
-	var metaData map[string]interface{}
-	if m, err := metadata(); err == nil {
-		metaData = m
-	} else {
+	ecsMeta, err := metadata()
+	if err != nil {
 		f.log.Error(errors.New("failed to load metadata", err))
 	}
 
@@ -207,7 +205,7 @@ func (f *fleetGateway) execute(ctx context.Context) (*fleetapi.CheckinResponse, 
 	cmd := fleetapi.NewCheckinCmd(f.agentInfo, f.client)
 	req := &fleetapi.CheckinRequest{
 		Events:   ee,
-		Metadata: metaData,
+		Metadata: ecsMeta,
 	}
 
 	resp, err := cmd.Execute(ctx, req)
